# gielda-analityka

./: CLAUDE.md  plot_emakler.py  pyproject.toml
